# libvrt

./: .clang-format  .gitignore  CMakeLists.txt  FindLibvrt.cmake  LICENSE  README.md  TODO.md  gcov.sh  libvrt.code-workspace  release.md
.github/ISSUE_TEMPLATE/: bug_report.md
cmake_modules/: FindCpplint.cmake  FindExhale.cmake  FindIWYU.cmake  FindStandardMathLibrary.cmake  Uninstall.cmake  my_add_executable.cmake  my_add_library.cmake  setup_target.cmake
doc/: Doxyfile.in  conf.py.in  index.html
doc/html/: .buildinfo  annotated.html  classes.html  dir_792d09d72ab8ab998969340ba4e6a252.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  genindex.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  menudata.js  objects.inv  search.html  searchindex.js  structvrt__class__identifier.html  structvrt__context.html  structvrt__context__association__lists.html  structvrt__context__association__lists__indicators.html  structvrt__context__indicators.html  structvrt__data__packet__payload__format.html  structvrt__device__identifier.html  structvrt__ephemeris.html  structvrt__ephemeris__indicators.html  structvrt__fields.html  structvrt__formatted__geolocation.html  structvrt__formatted__geolocation__indicators.html  structvrt__gain.html  structvrt__gps__ascii.html  structvrt__header.html  structvrt__header__indicators.html  structvrt__if__context.html  structvrt__state__and__event.html  structvrt__state__and__event__indicators.html  (+14 more)
doc/html/.doctrees/: environment.pickle  index.doctree
doc/html/_sources/: index.rst.txt
doc/html/api/: class_view_hierarchy.html  define_vrt__util_8h_1a3e035ea0e58b39727dae717cb9668a3f.html  define_vrt__util_8h_1a5f3ca533aadf44ad610a9082a03f2970.html  define_vrt__util_8h_1ab4eea459d403bcd1bca64b8131b6ea7a.html  define_vrt__util_8h_1ad7c3de0f564578239cd2de0a949e5823.html  define_vrt__util_8h_1ad89a6fd73c9363e892f99830c1598f16.html  define_vrt__util_8h_1ada868775661be67e4faac7fb851aa362.html  define_vrt__util_8h_1ae4cbfd2e2ff73da3b5ac98171e4626d3.html  dir__home_emil_libvrt_include.html  dir__home_emil_libvrt_include_vrt.html  enum_vrt__error__code_8h_1a9abf070632d4fe3b3942f589a1576cd4.html  enum_vrt__types_8h_1a1eb06fc8779386f52d587f2b04e75e9d.html  enum_vrt__types_8h_1a230b878e56adcc1bfd2b712608e46732.html  enum_vrt__types_8h_1a6365e6b8a67f083b3df3a232861207db.html  enum_vrt__types_8h_1a8b7e0ca74814ff290cb1afee9acc2504.html  enum_vrt__types_8h_1ac8c1f87a8c133971b31f0a9b3f2b2352.html  enum_vrt__types_8h_1acce62a86ec3b0ab63965523b148aca47.html  enum_vrt__types_8h_1ad3f5248585002368996827c559fa7e8d.html  enum_vrt__types_8h_1ae1c62c112b979fe098ab58e8d3a1fe45.html  file__home_emil_libvrt_include_vrt_vrt_error_code.h.html  file__home_emil_libvrt_include_vrt_vrt_init.h.html  file__home_emil_libvrt_include_vrt_vrt_read.h.html  file__home_emil_libvrt_include_vrt_vrt_string.h.html  file__home_emil_libvrt_include_vrt_vrt_time.h.html  file__home_emil_libvrt_include_vrt_vrt_types.h.html  file__home_emil_libvrt_include_vrt_vrt_util.h.html  file__home_emil_libvrt_include_vrt_vrt_words.h.html  file__home_emil_libvrt_include_vrt_vrt_write.h.html  file_view_hierarchy.html  function_vrt__init_8h_1a17707913c26e86919ef357b8ee303fb8.html  function_vrt__init_8h_1a1dcad10c4fcc5f3aee3e2285797e15a8.html  function_vrt__init_8h_1a2dbcaf0926d3f1a4ef7eb8a6fdc3d471.html  function_vrt__init_8h_1a438d9e547d1f1f767c165e39424f47f3.html  function_vrt__init_8h_1a7eb79955441624617e36814e15842131.html  function_vrt__init_8h_1a7fbb080f872ff991c828d5230b29cc6c.html  function_vrt__init_8h_1a8e9c2e8dde51136486cc2e7d9728f6f5.html  function_vrt__init_8h_1a9f7f55ea8ca949ef2f0f2033e8b9e896.html  function_vrt__init_8h_1ac48207b4c8fe750f09efca40d5d12130.html  function_vrt__init_8h_1ac676b61f32044b4f08d1caf7b740c328.html  function_vrt__read_8h_1a15f839ddc3bfd62631e61622a5635223.html  (+196 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  (+38 more)
example/: CMakeLists.txt
example/src/: if_data_plot.py  read_if_data.c  read_if_data_advanced.c  read_if_data_simple.c  read_if_packet_advanced.c  read_if_packet_simple.c  time_calendar.c  time_difference.c  write_if_context_advanced.c  write_if_context_simple.c  write_if_data.c  write_if_data_advanced.c  write_if_data_simple.c
examples/: write_if_data.c  write_if_data_plot.py
include/vrt/: vrt_common.h  vrt_error_code.h  vrt_init.h  vrt_read.h  vrt_string.h  vrt_time.h  vrt_types.h  vrt_util.h  vrt_validate.h  vrt_words.h  vrt_write.h
src/: calculate_bounds.py  timestamp_to_calendar.c  timestamp_to_calendar.h  vrt_bounds.h  vrt_common.c  vrt_fixed_point.c  vrt_fixed_point.h  vrt_init.c  vrt_read.c  vrt_string.c  vrt_time.c  vrt_util.c  vrt_util.h  vrt_util_internal.c  vrt_util_internal.h  vrt_validate.c  vrt_words.c  vrt_write.c
test/: CMakeLists.txt
test/src/: hex.h  init_garbage.cpp  init_garbage.h  main.cpp  read_assertions.cpp  read_assertions.h  read_util.cpp  read_util.h  timestamp_to_calendar_test.cpp  vrt_fixed_point_test.cpp  vrt_has_stream_id_test.cpp  vrt_init_test.cpp  vrt_is_context_test.cpp  vrt_read_context_test.cpp  vrt_read_fields_test.cpp  vrt_read_header_test.cpp  vrt_read_if_context_test.cpp  vrt_read_packet_test.cpp  vrt_read_trailer_test.cpp  vrt_time_calendar_calibration_test.cpp  vrt_time_calendar_ecef_ephemeris_test.cpp  vrt_time_calendar_fields_test.cpp  vrt_time_calendar_gps_geolocation_test.cpp  vrt_time_calendar_ins_geolocation_test.cpp  vrt_time_calendar_relative_ephemeris_test.cpp  vrt_time_calendar_test.cpp  vrt_time_difference_fields_test.cpp  vrt_time_difference_test.cpp  vrt_time_duration_test.cpp  vrt_validate_fields_test.cpp  vrt_validate_header_test.cpp  vrt_validate_if_context_test.cpp  vrt_validate_trailer_test.cpp  vrt_words_context_test.cpp  vrt_words_fields_test.cpp  vrt_words_if_context_test.cpp  vrt_words_packet_test.cpp  vrt_words_trailer_test.cpp  vrt_write_context_test.cpp  vrt_write_fields_test.cpp  (+4 more)
(+265 files in other folders)
