find_package(StandardMathLibrary REQUIRED)

function(add_example target)
    my_add_executable("${target}" NO_GLOB)
    target_sources("${target}" PRIVATE "src/${target}.c")
    target_link_libraries("${target}" PRIVATE vrt)
endfunction()

add_example(read_if_packet_advanced)
add_example(read_if_packet_simple)
add_example(time_calendar)
add_example(time_difference)
add_example(write_if_context_advanced)
add_example(write_if_context_simple)
add_example(write_if_data_advanced)
add_example(write_if_data_simple)

foreach(target IN ITEMS write_if_data_advanced write_if_data_simple)
    target_link_libraries("${target}" PRIVATE "${STANDARD_MATH_LIBRARY}")
endforeach()
